...
                        </prototypes>
                        <connections>
                            <outlet property="dataSource" destination="XFz-xc-sQa" id="ggH-oi-1WN"/>
                            <outlet property="delegate" destination="XFz-xc-sQa" id="yrN-B9-BAi"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Root View Controller" id="IPL-nt-28u">
                        <barButtonItem key="rightBarButtonItem" title="Push" id="ScC-XW-K9o">
                            <connections>
                                <segue destination="VV6-YK-Xyj" kind="show" id="6fj-7k-6jK"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
                </tableViewController>
...
